testsuite/tests/parser/should_fail/readFail036.stderr

readFail036.hs:6:16: error: [GHC-49378]
    Illegal kind signature ‘Type’
    In the data type declaration for ‘Foo’
    Suggested fix: Perhaps you intended to use KindSignatures
